<resources>
    <string name="app_name">Popular Movies</string>

    <string name="tmdb_attribution">This product uses the TMDb API but is not endorsed or certified by TMDb</string>

    <string name="image_description">Movie Poster</string>
    <string name="favorite_description">Favorite Movie</string>
    <string name="trailers_description">Launch Trailers</string>
    <string name="reviews_description">Launch Reviews</string>

    <string name="error_internet_failure">Internet unavailable. Try favorites or else turn on internet to try again.</string>

    <string name="format_release_date">%2$s %3$d</string>
    <string name="format_average">(%1$d%%)</string>
    <string name="format_title_alternate">Original: %1$s</string>

    <string name="unknown_release_date">Release date: Unknown</string>

    <string name="sample_text_title" translatable="false">Movie Title</string>
    <string name="sample_text_title_alt" translatable="false">[Alternate Movie Title]</string>
    <string name="sample_text_date" translatable="false">March 2019</string>
    <string name="sample_text_average" translatable="false">86%</string>
    <string name="sample_text_overview" translatable="false">Description</string>
    <string name="text_trailers">Trailers</string>
    <string name="text_reviews">Reviews</string>

    <string name="action_about">About</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_popularity">Popular</string>
    <string name="action_rating">Highly Rated</string>

    <string name="sort_ctx_favorite">Favorites</string>
    <string name="sort_ctx_popular">Current Most Popular</string>
    <string name="sort_ctx_rating">Highest Rated</string>

    <string-array name="months">
        <item >January</item>
        <item >February</item>
        <item >March</item>
        <item >April</item>
        <item >May</item>
        <item >June</item>
        <item >July</item>
        <item >August</item>
        <item >September</item>
        <item >October</item>
        <item >November</item>
        <item >December</item>
    </string-array>
</resources>
